@@ -1,3 +1,9 @@
+2006-04-05  Adam Schreiber  <sadam@clemson.edu>
+    
+    * libseahorse/seahorse-import.c:
+    * libseahorse/seahorse-signatures.c: Fix notifications to use new 
+    graphics.    
+
 2006-04-03  Adam Schreiber  <sadam@clemson.edu>
 
     * plugins/applet/seahorse-applet.c:
